style.css
:root {
  --text: #1D1D1D;
  --theme: #FF4A48;
  font-family: monospace;
  line-height: 1.4;
  color: var(--text);
  font-size: calc(8px + .5vw);
}

body { margin: 0; }

/* header ***************************************/

header {
  box-sizing: border-box;
  width: 100%;
  min-height: 70px;
  padding: 1em 4em;
  margin-top: 3em;
  background: white;
  display: flex;
  align-items: flex-start;
  justify-content: space-between;
  font-size: 1.1rem;
  z-index: 20;
}

header > nav {
  display: flex;
}

header > nav > * {
  padding: 2px 1em;
}

nav.lang > :not(:first-child) {
  border-left: 1px solid var(--text);
}

@media (min-width: 750px) {
  header.sticky { position: sticky; top: 0 }
  header.sticky > nav { position: sticky; top: 2.7em }
}

/* typography ***********************************/

a {
  text-decoration: none;
  color: var(--text);
}

a:hover {
  color: var(--theme);
}

main a {
  font-weight: bold;
  font-style: italic;
}

p {
  margin-bottom: 1.3em;
}

h1 { font-size: 1.9em; }
h2 { font-size: 1.5em; }
h3 { font-size: 1.1em; }
h1, h2, h3 { margin: 0; line-height: 1.6; }

h2 {
  display: inline-block;
  border-bottom: 2px solid var(--theme);
  margin-bottom: 1.5ex;
}

/* trick to adjust anchor positions */
@media (min-width: 750px) {
  h2 {
    padding-top: 200px;
    margin-top: -200px;
  }
}

.theme h2 {
  border-bottom: 2px solid var(--text);
}

.theme {
  background-color: var(--theme);
  color: white;
}

/* fixed logo ***********************************/

aside.sonart {
  position: fixed;
  width: 60px;
  bottom: 20px;
  left: 30px;
}

/* listing **************************************/

body > a {
  display: flex;
  position: relative;
  margin: 5ex 5em;
  justify-content: space-between;
}

body > a > img {
  display: inline-block;
  padding: 1.5em;
  box-sizing: border-box;
  transition: filter 0.4s ease;
  flex-grow: 1;
  width: 0;
}

@media (max-width: 750px) {
  body > a > img { padding: .5em }
  body > a > img:nth-of-type(n+3) { display: none }
}

/* overlays *************************************/

[overlay]::before {
  content: attr(overlay);
  position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
  font-size: 1.4rem;
  color: #fff;
  padding: 4.5ex 3em;
  font-style: italic;
  opacity: 0;
  transition: opacity 0.4s ease;
  z-index: 10;
  background-color: rgba(0,0,0,.6);
}

[overlay]:hover::before {
  opacity: 1;
}

[overlay].overlay-title::before {
  font-size: 1.8rem;
}

/* overview *************************************/

main > img {
  width: 100%;
}

#overview {
  display: flex;
  align-items: start;
}

@media (min-width: 750px) {
  #overview {
    margin-top: -125px;
  }
  #overview > div {
    width: 50%;
    padding: 5%;
    box-sizing: border-box;
  }
  #overview > div:first-of-type { margin-left: 5%; }
  .abstract { margin-top: -15%; }
}

dt { margin-bottom: 4px }
dd { margin-bottom: 18px }

.dark { color: var(--text) }
.abstract > :last-child {
  margin-top: 2em;
  margin-bottom: 0;
}

/* row lists ************************************/

.row {
  display: flex;
  list-style-type: none;
  padding: 0;
}

.row > * {
  flex: 1 0;
  margin: 20px;
}

.row img, .partner img {
  max-width: 100%;
  display: block;
  margin: 0 auto;
}

/* feature, credits, partners *******************/

main > section:not(#overview), footer {
  padding: 7ex 10%;
}

@media (min-width: 750px) {
  .two-column {
    column-count: 2; /* farewell, nested divs! */
    column-gap: 5%;
  }
}

audio {
  width: 100%;
  margin: 10px 0;
}

img[alt="Auswärtiges Amt"] {
  height: calc(100px + 10vh);
}

img[alt="Deutsch-Tschechischer Zukunftsfonds"] {
  height: calc(100px + 10vh);
}

.partner > .row {
  align-items: center;
  justify-content: space-around;
}

/* gallery **************************************/

.gallery {
  display: grid;
  list-style-type: none;
  padding: 0;
  /* grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); */
}

.gallery:not(.lift) > li {
  position: relative;
}

.gallery > li > img {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
  transition: transform .1s ease;
}

@media (min-width: 750px) {
  .gallery {
    grid-template-columns: 1fr 1fr 1fr;
  }

  .gallery > li > div {
    padding: 2em;
    box-sizing: border-box;
  }

  .gallery.lift > li > img:hover {
    transform: scale(1.1);
    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
  }

  .gallery:not([style]) > aside { display: none }
  .gallery > aside > * {
    position: fixed;
    z-index: 50;
    width: 40px;
    height: 40px;
    color: white;
    --d: 3em;
    transition: transform 0.1s ease;
  }
  .gallery > aside > .x { top: var(--d); right: var(--d) }
  .gallery > aside > .arrow-l { top: 50%; left: var(--d) }
  .gallery > aside > .arrow-r { top: 50%; right: var(--d) }
  .gallery[data-index="0"]      > aside > .arrow-l,
  .gallery[data-rev-index="-1"] > aside > .arrow-r { transform: scale(0) }
  .gallery > aside > *:hover { transform: scale(1.3) }
  .gallery > aside > *:active { transform: scale(0.9) }

  .gallery[style]::before {
    content: '';
    position: fixed;
    z-index: 40;
    top: 3em; bottom: 3em; left: 5em; right: 5em;
    background: var(--selected) center/contain no-repeat;
  }

  .gallery[style]::after {
    content: '';
    position: fixed;
    z-index: 30;
    top: 0; bottom: 0; left: 0; right: 0;
    background-color: rgba(20,20,20,0.9);
  }
}

@media (max-width: 750px) {
  .gallery {
    row-gap: 1em;
  }
}

/* footer ***************************************/

footer  {
  display: flex;
  background-color: #F6F6F6;
}

footer > div {
  box-sizing: border-box;
}

@media (min-width: 750px) {
  footer > div:first-child {
    width: 66%;
    margin-right: 25%;
  }

  footer > div:last-child {
    width: 45%;
  }
}

/* imprint **************************************/

.imprint {
  text-align: right;
  font-weight: bold;
  font-size: 1.2rem;
  padding: 4ex 4em;
}

/* single-column layout ***************************/

@media (max-width: 750px) {
  header, footer, #overview, .row {
    flex-wrap: wrap;
  }
  footer > div, #overview > div, .row > * {
    width: 100% !important;
    flex: initial;
  }

  header > img  {
    order: 1;
    width: 100%;
    margin-top: 30px;
  }
  #overview > div {
    padding: 10%;
  }

  aside { display: none; }
}

